syntax = "proto3";
package prismfinance.prismcore.amm;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/prism-finance/prism-core/x/amm/types";

message PendingTokenIntroduction {
  string asset_id = 1;
  uint64 target_pool_id = 2;
  uint64 yamm_pool_id = 3;
  string token_normalized_weight = 4 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false];
  int64 virtual_balance_interval_millis = 5;
}

